--- a/main.html
+++ b/main.html
@@ -8,8 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<div class="container">
+    <!-- Title -->
+    <h1 class="title">My Playlist</h1>
+
+    <!-- Playlist section -->
+    <div class="playlist">
+      <ul>
+        <li><a href="#" target="_blank">Song 1</a></li>
+        <li><a href="#" target="_blank">Song 2</a></li>
+        <li><a href="#" target="_blank">Song 3</a></li>
+        <li><a href="#" target="_blank">Song 4</a></li>
+        <li><a href="#" target="_blank">Song 5</a></li>
+      </ul>
+    </div>
+
+    <!-- Now Playing heading -->
+    <h2 class="now-playing">Now Playing...</h2>
+
+    <!-- Video player -->
+		<div class="next_section">
+    <div class="player_one">
+      <video controls>
+        <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+
+    <!-- MP3 player -->
+    <div class="player_two">
+      <h2>MP3 Songs</h2>
+      <p>Maan Meri Jaan</p>
+      <audio controls>
+        <source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg">
+        Your browser does not support the audio tag.
+      </audio>
+    </div>
+  </div>
+	</div>
+
+  <script src="./script.js"></script>
 
 </body>
 
